--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,7 @@
     <a :href="blog">我的部落格</a>
     <br>
     <a href="index.html">點我到第ㄧ頁</a>
+    <a href="index3.html">點我到第三頁</a>
     <div v-on:click="consolo.log('123')"> 123</div>
     <div v-if="showBooks">
         <ul>
